# home-delivery

./: .gitignore  package-lock.json
.github/workflows/: catalog-pipeline.yml
catalog/: Cargo.toml  justfile
catalog/cloud/: .terraform.lock.hcl  main.tf  providers.tf  terraform.tfvars  variables.tf
catalog/src/: errors.rs  main.rs  schema.rs
infra/envs/dev/terraform-state/: main.tf  providers.tf  terraform.tfvars
restaurants/auth/: package.json  serverless.yml
restaurants/auth/src/functions/listener/: index.js
restaurants/auth/yml/: cognito.yml  functions.yml
restaurants/eventbus/: package-lock.json  package.json  serverless.yml
restaurants/eventbus/yml/: stream.yml
restaurants/eventlake/: package.json  serverless.yml
restaurants/eventlake/yml/: firehose.yml  s3.yml
restaurants/gateway/: package.json  serverless.yml
restaurants/gateway/yml/: api.yml  authorizer.yml
restaurants/infra/: serverless.yml
restaurants/infra/yml/: cognito.yml  eventbus.yml
restaurants/menu/: .eslintrc.json  package-lock.json  package.json  serverless.yml
restaurants/menu/notes/: cognito.txt
restaurants/menu/src/connectors/: dynamodb.js
restaurants/menu/src/mappers/: restaurants.js
restaurants/menu/src/routes/: categories.js  restaurants.js
restaurants/menu/src/utils/: index.js
restaurants/menu/yml/: functions.yml  tables.yml
restaurants/menus/: package-lock.json  package.json  serverless.yml
restaurants/menus/src/connectors/: dynamodb.js
restaurants/menus/src/rest/: index.js
restaurants/menus/yml/: functions.yml  tables.yml
(+6 files in other folders)
