[package]
name = "catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", default-features = false }
async-graphql = { version = "6.0.10", default-features = false, features = [
    "tracing",
] }
async-graphql-actix-web = "6.0.10"
http = "0.2.10"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = "1.34.0"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }

[[bin]]
name = "lambda"

[[bin]]
name = "local"
